tests/core_tests/core_tests.exp
Error: map.js:23
 23:     let x = new Map(['foo', 123]); // error
                 ^^^^^^^^^^^^^^^^^^^^^ constructor call
 23:     let x = new Map(['foo', 123]); // error
                          ^^^^^ string. This type is incompatible with
546:     constructor(iterable: ?Iterable<[K, V]>): void;
                                         ^^^^^^ tuple type. See lib: <BUILTINS>/core.js:546

Error: map.js:23
 23:     let x = new Map(['foo', 123]); // error
                 ^^^^^^^^^^^^^^^^^^^^^ constructor call
 23:     let x = new Map(['foo', 123]); // error
                                 ^^^ number. This type is incompatible with
546:     constructor(iterable: ?Iterable<[K, V]>): void;
                                         ^^^^^^ tuple type. See lib: <BUILTINS>/core.js:546

Error: map.js:24
 24:     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                                ^^^^^ string. This type is incompatible with
 24:     let y: Map<number, string> = new Map([['foo', 123]]); // error
                    ^^^^^^ number

Error: map.js:24
 24:     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                                       ^^^ number. This type is incompatible with
 24:     let y: Map<number, string> = new Map([['foo', 123]]); // error
                            ^^^^^^ string

Error: map.js:29
 29:     (x.get('foo'): boolean); // error, string | void
          ^^^^^^^^^^^^ number. This type is incompatible with
 29:     (x.get('foo'): boolean); // error, string | void
                        ^^^^^^^ boolean

Error: map.js:29
 29:     (x.get('foo'): boolean); // error, string | void
          ^^^^^^^^^^^^ undefined. This type is incompatible with
 29:     (x.get('foo'): boolean); // error, string | void
                        ^^^^^^^ boolean

Error: map.js:30
 30:     x.get(123); // error, wrong key type
               ^^^ number. This type is incompatible with the expected param type of
 28:   function(x: Map<string, number>) {
                       ^^^^^^ string

Error: regexp.js:26
 26:     RegExp('foo', 'z'); // error
                       ^^^ string literal `z`. This type is incompatible with
337:     static (pattern: string | RegExp, flags?: RegExp$flags): RegExp;
                                                   ^^^^^^^^^^^^ character set `gimsuy`. See lib: <BUILTINS>/core.js:337
   26:     RegExp('foo', 'z'); // error
                         ^^^ `z` is not a member of the set

Error: regexp.js:27
 27:     new RegExp('foo', 'z'); // error
                           ^^^ string literal `z`. This type is incompatible with
339:     constructor(pattern: string | RegExp, flags?: RegExp$flags): RegExp;
                                                       ^^^^^^^^^^^^ character set `gimsuy`. See lib: <BUILTINS>/core.js:339
   27:     new RegExp('foo', 'z'); // error
                             ^^^ `z` is not a member of the set

Error: weakset.js:19
 19: let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
               ^^^^^^^^^^^^^^^^^^^^^^ constructor call
 19: let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                            ^ number. This type is incompatible with
584: declare class WeakSet<T: Object> {
                              ^^^^^^ object type. See lib: <BUILTINS>/core.js:584

Error: weakset.js:19
 19: let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
               ^^^^^^^^^^^^^^^^^^^^^^ constructor call
 19: let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                               ^ number. This type is incompatible with
584: declare class WeakSet<T: Object> {
                              ^^^^^^ object type. See lib: <BUILTINS>/core.js:584

Error: weakset.js:19
 19: let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
               ^^^^^^^^^^^^^^^^^^^^^^ constructor call
 19: let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                                  ^ number. This type is incompatible with
584: declare class WeakSet<T: Object> {
                              ^^^^^^ object type. See lib: <BUILTINS>/core.js:584

Error: weakset.js:36
 36: let ws5 = new WeakSet(numbers()); // error, must be objects
               ^^^^^^^^^^^^^^^^^^^^^^ constructor call
 29: function* numbers(): Iterable<number> {
                                   ^^^^^^ number. This type is incompatible with
584: declare class WeakSet<T: Object> {
                              ^^^^^^ object type. See lib: <BUILTINS>/core.js:584


Found 13 errors
